codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_empty_build_truncated.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                  "
"› Ask Codex to do anything        "
"                                  "
"                                  "
"                                  "
"                                  "
"                                  "
"                                  "
"  Plan mode · feature/rob…@0.144.1"
